<resources>
    <string name="app_name">Magnit Subscription</string>
    <string name="nav_home">Home</string>
    <string name="nav_subs">Subscriptions</string>
    <string name="nav_usr">Profile</string>
    <string name="usr_name">Ivan Petrov</string>
    <string name="support">Customer service</string>
    <string name="notifications">Notifications</string>
    <string name="info">Information</string>
    <string name="exit">Logout your profile</string>
    <string name="usr_phone">+7 (900) 123 45 67</string>
    <string name="support_phone">8 (800) 100 20 30</string>
    <string name="call">Call:</string>
    <string name="write">Email:</string>
    <string name="support_email">Podpiska@magnit.ru</string>
    <string name="notification_settings">Notification settings</string>
    <string name="sms_notification">Enable SMS-notification</string>
    <string name="push_notification">Enable Push-notification</string>
    <string name="email_notification">Enable Email-notification</string>
    <string name="demo">This is a demo app for hackaton VTBxMGNT</string>
    <string name="rights">All rights reserved to PJSC Magnit</string>
    <string name="dev">Will be available in full version</string>
    <string name="subs_family">Family</string>
    <string name="addr">First str, 1</string>
    <string name="subs_optimum">Optimum</string>
    <string name="subs_basic">Basic</string>
    <string name="subs_individual">Individual</string>
    <string name="delivery">Delivery:</string>
    <string name="free">free</string>
    <string name="delay">Delivery delay count:</string>
    <string name="period">Available period:</string>
    <string name="best_price">Best price garantee:</string>
    <string name="weight">Weight limit:</string>
    <string name="recomendation">Additional delivery goods count:</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="weeks">2/4 weeks</string>
    <string name="cashbaсk_s1">2%</string>
    <string name="cashback_s2">1.5%</string>
    <string name="cashback_s3">1%</string>
    <string name="cashback_s4">0.5%</string>
    <string name="cashback">*We return subscription and action price at delivery date difference with to your loyal card</string>
    <string name="search">Search goods</string>
    <string name="your_subs">Your subscription is \"Family\"</string>
    <string name="discount_s1">9%</string>
    <string name="discount_s2">7%</string>
    <string name="discount_s3">5%</string>
    <string name="discount_s4">3%</string>
    <string name="discount">Additional discount:</string>
    <string name="bonus">Additional SKU bonus:</string>
    <string name="price_s1">more than 9000 rub</string>
    <string name="price_s2">7000-8999 rub</string>
    <string name="price_s3">5000-6999 rub</string>
    <string name="price_s4">3000-4999 rub</string>
    <string name="cost">Reuired good total cost</string>
    <string name="choose">Choose and search for goods</string>
    <string name="go_to">Go to goods</string>
    <string name="next_delivery">Next delivery:</string>
    <string name="change">Change</string>
    <string name="date">6th of June</string>
    <string name="time">06:00 - 08:00</string>
    <string name="propose">Propositions for you:</string>
    <string name="profit">Profit for you:</string>
    <string name="add">Add to your next delivery:</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>