<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.Subs3Fragment">

    <TextView
        android:id="@+id/tvSub3AddSku"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/cost"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/tvSub3Lmt"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvSub3Lmt"
        app:layout_constraintTop_toBottomOf="@+id/tvSub3Lmt" />

    <TextView
        android:id="@+id/tvSub3AddSkuCnt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/price_s3"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/tvSub3Yes"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/tvSub3Yes"
        app:layout_constraintTop_toBottomOf="@+id/tvSub3Yes" />

    <TextView
        android:id="@+id/tvSub3BstPrc2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/bonus"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/tvSub3BstPrc"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvSub3BstPrc"
        app:layout_constraintTop_toBottomOf="@+id/tvSub3BstPrc" />

    <TextView
        android:id="@+id/tvSub3CshBck2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/cashback_s3"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/tvSub3CshBck"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/tvSub3CshBck"
        app:layout_constraintTop_toBottomOf="@+id/tvSub3CshBck" />

    <TextView
        android:id="@+id/tvSub3Yes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/yes"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/tvSub3CshBck2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/tvSub3CshBck2"
        app:layout_constraintTop_toBottomOf="@+id/tvSub3CshBck2" />

    <ImageView
        android:id="@+id/imVClsSub3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_close"
        app:layout_constraintBottom_toTopOf="@+id/tvSub3Fr"
        app:layout_constraintEnd_toEndOf="@+id/tvSub3Fr"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/tvSub3Fr"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvSub3BstPrc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/discount"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/tvSub3Prd"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvSub3Prd"
        app:layout_constraintTop_toBottomOf="@+id/tvSub3Prd" />

    <TextView
        android:id="@+id/tvSub3Lmt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/weight"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/tvSub3BstPrc2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvSub3BstPrc2"
        app:layout_constraintTop_toBottomOf="@+id/tvSub3BstPrc2" />

    <TextView
        android:id="@+id/tvSub3CshBck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/discount_s3"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/tvSub3Wks"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/tvSub3Wks"
        app:layout_constraintTop_toBottomOf="@+id/tvSub3Wks" />

    <TextView
        android:id="@+id/tvSub3Prd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/period"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/tvSub3Del"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvSub3Del"
        app:layout_constraintTop_toBottomOf="@+id/tvSub3Del" />

    <TextView
        android:id="@+id/tvSub3Wks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/weeks"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/tvSub3DelCnt"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/tvSub3DelCnt"
        app:layout_constraintTop_toBottomOf="@+id/tvSub3DelCnt" />

    <TextView
        android:id="@+id/tvSub3Del"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/delay"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/tvSub3Dlvr"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvSub3Dlvr"
        app:layout_constraintTop_toBottomOf="@+id/tvSub3Dlvr" />

    <TextView
        android:id="@+id/tvSub3DelCnt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="1"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/tvSub3Fr"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/tvSub3Fr"
        app:layout_constraintTop_toBottomOf="@+id/tvSub3Fr" />

    <TextView
        android:id="@+id/tvSub3Dlvr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/delivery"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/tvSub3Name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvSub3Name"
        app:layout_constraintTop_toBottomOf="@+id/tvSub3Name" />

    <TextView
        android:id="@+id/tvSub3Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/subs_basic"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSub3Fr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/free"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tvSub3Dlvr"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Space
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/btnSub3Gt"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/btnSub3Gt"
        app:layout_constraintTop_toBottomOf="@+id/btnSub3Gt" />

    <Button
        android:id="@+id/btnSub3Gt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/go_to"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/tvSub3AddSkuCnt"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/tvSub3AddSku"
        app:layout_constraintTop_toBottomOf="@+id/tvSub3AddSku" />

</androidx.constraintlayout.widget.ConstraintLayout>